fix: scrollbar card on overflow

--- a/components/card.scss
+++ b/components/card.scss
@@ -66,7 +66,8 @@
     @extend .is-p;
 
     display: block;
-    padding: 0 $card-padding-x $card-padding-y;
+    margin-bottom: $card-padding-y;
+    padding: 0 $card-padding-x;
   }
 
   &_actions {
